fixed horizontal scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@ $weighter-font: 700;
   letter-spacing: 0.15px;
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .page__body {
@@ -181,10 +182,6 @@ $weighter-font: 700;
 .icon--phone-number {
   display: none;
   text-align: right;
-}
-
-.icon--phone:hover + .icon--phone-number {
-  display: block;
 }
 
 .icon--menu {
@@ -543,6 +540,10 @@ input:-webkit-autofill:focus {
     width: 32px;
   }
 
+  .icon--phone:hover + .icon--phone-number {
+    display: block;
+  }
+
   .main {
     gap: 120px;
   }
@@ -712,7 +713,9 @@ input:-webkit-autofill:focus {
     width: 32px;
   }
 
-
+  .icon--phone:hover + .icon--phone-number {
+    display: block;
+  }
 
   .main {
     gap: 120px;
